syntax = "proto3";

message Empty {}

message NetworkInfo {
    string coordinator_address = 1;
    repeated string node_addresses = 2;
    repeated int32 val_indices = 3;
    int32 worker_idx = 4;
}

message DataSet {
    message DataPoint {
        map<int32, float> datapoint = 1;
        int32 target = 2;
    }
    repeated DataPoint datapoints = 1;
}

message StartMessage {}

message WeightUpdate {
    map<int32, float> delta_w = 1;
}

message LossMessage {
    float loss = 1;
    float timestamp = 2;
    int32 worker_idx = 3;
}

message ReadyToGo {}

message EpochsDone {}

message StopMessage {}

service Hogwild {
    rpc GetNodeInfo (NetworkInfo) returns (Empty) {}
    rpc StartSGD (StartMessage) returns (Empty) {}
    rpc GetWeightUpdate (WeightUpdate) returns (Empty) {}
    rpc GetReadyToGo (ReadyToGo) returns (Empty) {}
    rpc GetEpochsDone (EpochsDone) returns (Empty) {}
    rpc GetStopMessage (StopMessage) returns (Empty) {}
    rpc GetLossMessage (LossMessage) returns (Empty) {}
}
